--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -295,4 +295,7 @@
   <data name="playersOnline" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\playersOnline.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="refresh2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\refresh2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
